Fix #109898: Incorrect behavior when moving objects to linked collection

Do not move objects to a collection which is linked from another file.

Pull Request: https://projects.blender.org/blender/blender/pulls/109957